[gd_scene load_steps=4 format=3 uid="uid://2wntfsyydaet"]

[ext_resource type="Script" path="res://menu_scenes/LevelEditor/WaveSettings/monster_setting_item.gd" id="1_jwpsb"]
[ext_resource type="Texture2D" uid="uid://bloa2axjihn3o" path="res://Assets/Monsters/Monster_BLUE.png" id="2_s2bv5"]
[ext_resource type="PackedScene" uid="uid://dlc2rd4vh13dc" path="res://UtilScenes/UI/ui_label_small.tscn" id="3_vr71b"]

[node name="MonsterSettingItem" type="Panel"]
custom_minimum_size = Vector2(110, 110)
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_jwpsb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(55, 28)
texture = ExtResource("2_s2bv5")

[node name="NameLabel" parent="." instance=ExtResource("3_vr71b")]
layout_mode = 0
offset_top = 50.0
offset_right = 110.0
offset_bottom = 67.0
text = "Name
"
horizontal_alignment = 1

[node name="DecreaseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 72.0
offset_right = 30.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 10
text = "<"

[node name="IncreaseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 72.0
offset_right = 105.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 10
text = ">"

[node name="CountEdit" type="LineEdit" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 34.0
offset_top = 72.0
offset_right = 75.0
offset_bottom = 102.0
theme_override_constants/minimum_character_width = 0
theme_override_font_sizes/font_size = 15
text = "1"
alignment = 1

[connection signal="pressed" from="DecreaseButton" to="." method="_on_decrease_button_pressed"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
[connection signal="focus_exited" from="CountEdit" to="." method="_on_count_edit_focus_exited"]
